--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./images/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="./images/icon.png" />
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
       
     -->
-    <title>React App</title>
+    <title>FlashFeed | Web</title>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap');
       @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap');
